fix: 新增icon 去掉外层的z-index

--- a/src/components/Filter/MenuItem/MenuItem.scss
+++ b/src/components/Filter/MenuItem/MenuItem.scss
@@ -2,7 +2,6 @@
 
 .hui-filter-menu-item-wrap {
   position: absolute;
-  z-index: $hui-z-index-l;
   width: 100%;
   background-color: $hui-filter-menu-item-wrap-bg-color;
 
